<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity"
    android:padding="16dp"
    android:background="@drawable/gradient_background1">

    <TextView
        android:id="@+id/textViewGreetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome to the Café"
        android:textSize="24sp"
        android:textColor="@color/starbucks_brown"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/CardViewRatio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textViewGreetings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButtonTea"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickChangeDrink"
                android:text="@string/tea"
                android:textSize="18sp" />

            <RadioButton
                android:onClick="onClickChangeDrink"
                android:id="@+id/radioButtonCoffee"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/coffee"
                android:textSize="18sp" />
        </RadioGroup>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/TextviewWhatAddToTea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="What to add to your drink"
        android:textSize="18sp"
        android:textColor="@color/starbucks_brown"
        app:layout_constraintTop_toBottomOf="@+id/CardViewRatio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/CheckBoxView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/TextviewWhatAddToTea"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkboxSugar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/sugar" />

            <CheckBox
                android:id="@+id/checkboxMilk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/milk" />

            <CheckBox
                android:id="@+id/checkboxLemon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/lemon" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/ChooseTypeOfDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Choose the type of drink"
        android:textSize="18sp"
        android:textColor="@color/starbucks_brown"
        app:layout_constraintTop_toBottomOf="@+id/CheckBoxView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <Spinner
        android:id="@+id/spinnerOfDrinkTea"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ChooseTypeOfDrink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="visible"
        android:entries="@array/array_of_drinks_tea"
        android:background="@drawable/spinner_background" />

    <Spinner
        android:id="@+id/spinnerOfDrinkCoffee"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/array_of_drinks_coffee"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/ChooseTypeOfDrink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/spinner_background" />

    <Button
        android:id="@+id/MakeOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/starbucks_brown"
        android:onClick="onClickMakeOrder"
        android:text="Make an Order"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerOfDrinkTea" />
</androidx.constraintlayout.widget.ConstraintLayout>
